# ArenaBreakoutInfinite-Buy

./: .gitignore  AGENTS.md  ArenaBuyer.spec  CLAUDE.md  README.md  TASK_EXECUTION_DESIGN_FINAL.md  TASK_EXECUTION_DESIGN_LATEST.md  TASK_EXECUTION_DESIGN_UPDATED.md  a.py  annotate_blocks.py  annotate_lines.py  app_config.py  auto_clicker.py  autobuyer.py  buy_tasks.json  click_logger.py  compat.py  config.json  demo.md  diff_cfg.py  extract_price_roi.py  font_util.py  goods.json  gui_app.py  history_store.py  key_mapping.json  log.md  multi_snipe_runner.py  note.md  ocr_reader.py  package-lock.json  path_finder.py  price_reader.py  pylance_error_output.text  pyproject.toml  snipe_tasks.json  task_runner.py  task_runner_flow.md
Umi-OCR_Paddle_v2.1.5/UmiOCR-data/: .pre_settings  .settings
data/: config.json
desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
desktop/resources/app/defaults/: config.json  goods.json
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  main-window-controls.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/app/: state.rs  types.rs
desktop/src-tauri/src/automation/: capture.rs  common.rs  debug_recorder.rs  input.rs  mod.rs  multi_runner.rs  native_capture.rs  ocr.rs  session_support.rs  single_runner.rs  vision.rs  window.rs
desktop/src-tauri/src/commands/: bootstrap.rs  config.rs  goods.rs  history.rs  legacy.rs  mod.rs  runtime.rs  tasks.rs  templates.rs
desktop/src-tauri/src/config/: defaults.rs  mod.rs  paths.rs  service.rs
desktop/src-tauri/src/legacy/: importer.rs
desktop/src-tauri/src/runtime/: events.rs  log.rs  manager.rs  mod.rs  requirements.rs
desktop/src-tauri/src/storage/: repository.rs
desktop/src-tauri/src/storage/migrations/: mod.rs
desktop/src/app/: queryClient.ts  store.ts
desktop/src/components/: debug-mode-card.tsx  minimal-page.tsx  shell-toolbar.tsx  window-bar.tsx
desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  spinner-number-input.tsx  table.tsx
desktop/src/lib/: api.ts  assets.ts  capture-overlay.ts  goods-categories.ts  runtime-preflight.ts  tauri.ts  types.ts  window-controls.ts
desktop/src/routes/: CaptureOverlayPage.tsx  GoodsPage.tsx  HistoryPage.tsx  MultiTasksPage.tsx  SettingsPage.tsx  ShellLayout.tsx  SingleTasksPage.tsx
desktop/src/styles/: globals.css
docs/: RESOURCES.md  sqlite_storage_design.md  单商品流程_Rust实现说明.md  单商品购买流程_方案A.md  单商品购买流程设计指导方案.md  首页标识模板识别基准报告.md
images/: _avg_price_roi.png-result.txt  _tmp_cur_ocr.png-result.txt
notebooks/: price_qty_extractor.ipynb
output/: _avg_price_roi_res.json  bench_cli_10__currency_avg_roi.txt  bench_cli_2__currency_avg_roi.txt  bench_cli_7__currency_total_roi.txt  price_history.jsonl  price_history_minutely.jsonl  purchase_history.jsonl
scripts/: bench_umi_ocr.py  test_ocr.py
src/: history_store.py
src/super_buyer/: __main__.py
src/super_buyer/config/: __init__.py  defaults.py  loader.py  migrations.py
src/super_buyer/core/: __init__.py  common.py  exceptions.py  launcher.py  logging.py  models.py  multi_snipe.py  single_purchase_runner_v2.py  task_runner.py
src/super_buyer/resources/: paths.py
src/super_buyer/resources/assets/: __init__.py
src/super_buyer/resources/defaults/: __init__.py  config.json  goods.json
src/super_buyer/services/: __init__.py  compat.py  font_loader.py  history.py  ocr.py  price_reader.py  runtime_logs.py  screen_ops.py  umi_runtime.py
src/super_buyer/ui/: __init__.py  app.py  goods_market.py
src/wg1/: __main__.py
src/wg1/config/: __init__.py  defaults.py  loader.py  migrations.py
src/wg1/core/: exceptions.py  launcher.py  multi_snipe.py  task_runner.py
src/wg1/resources/: paths.py
src/wg1/services/: font_loader.py  history.py  ocr.py  price_reader.py  screen_ops.py
src/wg1/ui/: __init__.py  app.py  goods_market.py
tests/: test_config_loader.py  test_history_store.py  test_logging_format.py  test_runtime_logs.py
tools/: bench_home_indicator.py  build_win.bat  diff_cfg.py  gen_icon.py
utils/: __init__.py  ocr_utils.py
(+22 files in other folders)
