[project]
name = "wg1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
    "ahk[binary]",
    "pytesseract>=0.3.13",
    "python-bidi==0.4.2",
    "easyocr>=1.7.2",
    "matplotlib>=3.9.0",
    "requests>=2.31.0",
]

[project.scripts]
wg1-gui = "gui_app:main"
